--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-Rest{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.restaurant{
+  margin-top: 20px;
+  width: 300px;
+  height: 400px;
+  background-color: #f0f0f0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.restaurant :hover{
+  cursor: pointer;
+  border:1px solid black;
+}
+
+.main-div-header{
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+.logo{
+  margin-left: 15px;
+  margin-top: 15px;
+  font-size: 25px;
+}
+.navbar >ul{
+  display: flex;
+  margin-right: 10px;
+}
+.navbar >ul >li{
+  list-style: none;
+  margin-right: 10px;
+  font-size: 25px;
+  text-decoration: underline;
+ 
+}
+.navbar{
+  display: flex;
+}
+.menu-card{
+  border: 1px solid black;
+  background-color: #f0f0f0;
+}
+
+.menu-card-cont{
+  display: flex;
+  flex-wrap: wrap;
 }
